# hugr-qir

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  avoid_arrays_test.hugr  avoid_arrays_test.ll  devenv.nix  hello.py  pyproject.toml  ruff.toml
.github/: change-filters.yml
.github/workflows/: build-wheels.yml  ci-py.yml  ci-qir-runner.yml  ci-rs.yml  issue-to-project.yml  lint.yml  python-wheels.yml
examples/: submit-guppy-h1-h2-via-qir.ipynb
guppy_examples/: avoid_arrays_test.py  planqc_1.py  quantum-classical-1.py  quantum-complex-1.py  quantum-conditional-1.py  quantum-functions-1.py  quantum-functions-2.py  quantum-loop-1.py  quantum-loop-2.py  quantum-simple-1.py  quantum-simple-2.py  requirements.txt  returnarray-1.py  simple_array_test.py
python/hugr_qir/: __init__.py  _hugr_qir.pyi  cli.py  hugr_to_qir.py  output.py
python/hugr_qir/tests/: test_guppy_examples.py  test_hello.py
python/tests/: conftest.py  test_guppy_examples.py  test_guppy_to_qir.py  test_hugr_to_qir.py
python/tests/snapshots/: planqc-1.ll  quantum-classical-1.ll  quantum-complex-1.ll  quantum-conditional-1.ll  quantum-conditional-2.ll  quantum-conditional-2_native_default.b64  quantum-conditional-2_native_default.bc  quantum-conditional-2_native_default.ll  quantum-conditional-2_native_less.b64  quantum-conditional-2_native_less.bc  quantum-conditional-2_native_less.ll  quantum-conditional-2_native_none.b64  quantum-conditional-2_native_none.bc  quantum-conditional-2_native_none.ll  quantum-conditional-2_quantinuum-hardware_aggressive.b64  quantum-conditional-2_quantinuum-hardware_aggressive.bc  quantum-conditional-2_quantinuum-hardware_default.bc  quantum-conditional-2_quantinuum-hardware_less.b64  quantum-conditional-2_quantinuum-hardware_less.bc  quantum-conditional-2_quantinuum-hardware_none.b64  quantum-conditional-2_quantinuum-hardware_none.bc  quantum-conditional-2_quantinuum-hardware_none.ll  quantum-functions-1.ll  quantum-functions-2.ll  quantum-loop-1.ll  quantum-loop-2.ll  quantum-simple-1.ll  quantum-simple-2.ll
src/: cli.rs  import pyqir.lua  inline.rs  lib.rs  main.rs  py.rs  qir.rs  rotation.rs  sroa.rs  target.rs  test.rs
src/qir/: boolcodegenextension_workaround.rs  futures_ext.rs  qsystem_ext.rs  result_ext.rs  tket2_ext.rs
src/qir/snapshots/: hugr_qir__qir__futures_ext__test__emit@llvm14_tket2.futures.Read.snap  hugr_qir__qir__futures_ext__test__emit@pre-mem2reg@llvm14_tket2.futures.Read.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.LazyMeasure.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.Measure.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.MeasureReset.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.PhasedX.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.QFree.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.Reset.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.Rz.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.TryQAlloc.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.ZZMax.snap  hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket2.qsystem.ZZPhase.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.LazyMeasure.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.Measure.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.MeasureReset.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.PhasedX.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.QFree.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.Reset.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.Rz.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.TryQAlloc.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.ZZMax.snap  hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket2.qsystem.ZZPhase.snap  hugr_qir__qir__result_ext__test__emit@llvm14_tket2.result.result_bool.snap  hugr_qir__qir__result_ext__test__emit@llvm14_tket2.result.result_int.snap.new  hugr_qir__qir__result_ext__test__emit@llvm14_tket2.result.result_uint.snap.new  (+41 more)
src/snapshots/: hugr_qir__rotation__test__emit_all_ops@llvm14_0.snap  hugr_qir__rotation__test__emit_all_ops@pre-mem2reg@llvm14_0.snap
tests/: guppy.rs
tests/snapshots/: guppy__llvmir@planqc_1.snap  guppy__llvmir@quantum-classical-1.snap  guppy__llvmir@quantum-complex-1.snap  guppy__llvmir@quantum-conditional-1.snap  guppy__llvmir@quantum-functions-1.snap  guppy__llvmir@quantum-functions-2.snap  guppy__llvmir@quantum-loop-1.snap  guppy__llvmir@quantum-loop-2.snap  guppy__llvmir@quantum-simple-1.snap  guppy__llvmir@quantum-simple-2.snap  guppy__stderr@quantum-loop-2.snap
