[package]
name = "hugr-qir"
version = "0.0.1"
edition = "2021"

[features]
default = ["py"]
py = ["dep:pyo3"]

[dependencies]
anyhow = "1.0.96"
clap = "4.5.30"
clap-verbosity-flag = "3.0.2"
clio = { version = "0.3.5", features = ["clap-parse"] }
delegate = "0.13.2"
hugr = { version = "0.14.3", features = ["llvm"] }
hugr-cli = "0.14.3"
hugr-llvm = { version = "0.14.3", features = ["test-utils"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
petgraph = "0.7.1"
pyo3 = { version = "0.23.4", features = [
    "abi3-py310",
    "anyhow",
], optional = true }
serde_json = "1.0.139"
tket2 = "0.7.2"
tket2-hseries = { version = "0.9.0", features = ["cli"] }

[patch.crates-io]
hugr = { git = "https://github.com/CQCL/hugr", branch = "acl/inline_call" }
hugr-core = { git = "https://github.com/CQCL/hugr", branch = "acl/inline_call" }
hugr-llvm = { git = "https://github.com/CQCL/hugr", branch = "acl/inline_call" }
hugr-cli = { git = "https://github.com/CQCL/hugr", branch = "acl/inline_call" }


[dev-dependencies]
insta = "1.42.1"
rstest = "0.24.0"
serde = { version = "1.0.218", features = ["derive"] }
typetag = "0.2.19"
