[project]
name = "hugr-qir"
version = "0.0.1"
description = "Quantinuum's tool for converting HUGR to QIR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "guppylang>=0.14.0",
]

[dependency-groups]
dev = [
    "maturin>=1.1,<2.0",
    "pip>=24.3.1",
    "pytest>=8.3.4",
    "quantinuum-qircheck",
    "ruff>=0.9.0",
]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hugr_qir._hugr_qir"
python-source = "python"
python-packages = ["hugr_qir"]
bindings = "pyo3"

[tool.uv.sources]
quantinuum-qircheck = { git = "https://github.com/CQCL/quantinuum-qircheck.git", branch = "main" }

[tool.uv]

dev-dependencies = [
    "pre-commit >=3.6.2,<4",
    "pytest >=8.1.1,<9",
    "pytest-cov >=5.0.0,<6",
    "mypy >=1.9.0,<2",
    "ruff >=0.9.0,<1",
]