[project]
name = "hugr-qir"
version = "0.0.1"
description = "Quantinuum's tool for converting HUGR to QIR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "guppylang~=0.18.0",
]

[dependency-groups]
dev = [
    "maturin>=1.1,<2.0",
    "pip>=24.3.1",
    "pytest>=8.3.4",
    "quantinuum-qircheck",
    "ruff>=0.9.0",
    "mypy >=1.9.0,<2",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hugr_qir._hugr_qir"
python-source = "python/"
python-packages = ["hugr_qir"]
bindings = "pyo3"

[tool.pyright]
# Rust bindings have typing stubs but no python source code.
reportMissingModuleSource = "none"


[tool.uv.sources]
quantinuum-qircheck = { git = "https://github.com/CQCL/quantinuum-qircheck.git", branch = "main" }
