[project]
name = "hugr-qir"
version = "0.0.1"
description = "Quantinuum's tool for converting HUGR to QIR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click >= 8.1.8",
    "quantinuum-qircheck == 0.1.0",
]

[project.scripts]
hugr-qir = "hugr_qir.cli:hugr_qir"

[dependency-groups]
dev = [
    "maturin>=1.1,<2.0",
    "pip>=24.3.1",
    "pytest>=8.3.4",
    "pytest-snapshot>=0.9.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy >=1.9.0,<2",
    "pytest-cov >=5.0.0,<6",
    "guppylang~=0.18.0",
]
examples = [
    "pytket-quantinuum>=0.45.0",
    "guppylang~=0.18.0",
    "jupyterlab>=4.4.2",
    "llvmlite>=0.44.0"
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hugr_qir._hugr_qir"
python-source = "python/"
python-packages = ["hugr_qir"]
bindings = "pyo3"

[tool.pyright]
# Rust bindings have typing stubs but no python source code.
reportMissingModuleSource = "none"
